--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,29 @@
+@keyframes pulse {
+  from {
+    transform: scale(1);
+    opacity: 0.5;
+  }
+  to {
+    transform: scale(1.4);
+    opacity: 0;
+  }
+}
+@keyframes rotate-right {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate-left {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
 *,
 *::before,
 *::after {
@@ -132,21 +158,71 @@ h1.company-name {
 .nav__link:hover {
   color: #d6c78e;
 }
-.nav__link::before {
+
+.cards {
+  background-color: #191919;
+  overflow: hidden;
+}
+.cards__box {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  gap: 2em;
+  padding: 6em 2em;
+}
+.cards__card {
+  position: relative;
+  display: grid;
+  justify-items: center;
+  padding: 3em;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background-color: #232323;
+  transition: background-color 0.3s, border 0.3s;
+  z-index: 5;
+}
+.cards__card:hover {
+  background-color: #191919;
+  border: 1px solid #d6c78e;
+  z-index: 1;
+}
+.cards__card::before {
   position: absolute;
-  top: 0;
-  left: 0;
   content: "";
   width: 100%;
   height: 100%;
   border: 1px solid #d6c78e;
+  border-radius: 8px;
   opacity: 0;
 }
-.nav__link::before:hover::before {
+.cards__card:hover::before {
   animation: pulse 1s;
+}
+.cards__card img {
+  margin-bottom: 1em;
+  width: 60px;
+}
+.cards__card h3 {
+  margin-bottom: 0.6em;
+  text-transform: uppercase;
+}
+.cards__card--one {
+  grid-row: 1/2;
+  grid-column: 1/-1;
+}
+.cards__card--two {
+  grid-row: 2/3;
+  grid-column: 1/-1;
+}
+.cards__card--three {
+  grid-row: 3/4;
+  grid-column: 1/-1;
 }
 
 @media (min-width: 992px) {
+  h1.company-name {
+    font-size: 6rem;
+  }
   .header {
     grid-template-rows: auto repeat(2, 1fr);
   }
@@ -209,7 +285,25 @@ h1.company-name {
   .nav__link {
     color: #fff;
   }
+  .nav__link::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 100%;
+    border: 1px solid #d6c78e;
+    opacity: 0;
+  }
+  .nav__link:hover::before {
+    animation: pulse 1s;
+  }
   .hamburger {
     display: none;
+  }
+}
+@media (min-width: 992px) {
+  .header__text p {
+    font-size: 2.2rem;
   }
 }/*# sourceMappingURL=main.css.map */
