--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,69 @@ h1.company-name {
   display: none;
 }
 
+.plans {
+  padding: 6em 2em;
+  background-color: #191919;
+}
+.plans__box {
+  margin: 1em 0;
+  padding: 2em 1em;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background-color: #232323;
+  cursor: pointer;
+}
+.plans__box:hover {
+  background-color: #191919;
+  border: 2px solid #d6c78e;
+  transition: 0.7s;
+}
+.plans__item {
+  margin: 1em 0;
+}
+.plans__item-icon {
+  width: 50px;
+}
+.plans__item-name {
+  margin-top: 0;
+  margin-bottom: 1.5em;
+  font-size: 1.8rem;
+  color: #d6c78e;
+}
+
+.newsletter {
+  padding: 2em 8em;
+  background-color: #a01c35;
+  text-align: center;
+}
+.newsletter__text {
+  padding: 1em;
+  margin-bottom: 1em;
+  font-size: 4rem;
+  font-weight: 200;
+}
+.newsletter__form input {
+  margin-bottom: 1em;
+  padding: 1em;
+  width: 100%;
+  border: 1px solid transparent;
+  background-color: #fff;
+}
+.newsletter__form button {
+  padding: 1em;
+  border: 1px solid #d6c78e;
+  background: none;
+  color: #d6c78e;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s, 0.3s;
+}
+.newsletter__form button:hover {
+  color: #a01c35;
+  background-color: #d6c78e;
+}
+
 @media (min-width: 576px) {
   .info {
     grid-template-areas: "title box" "title box " "title box ";
@@ -328,6 +391,10 @@ h1.company-name {
     width: 15%;
     animation: rotate-right 140s infinite linear;
   }
+  .newsletter__text {
+    margin-bottom: 0;
+    font-size: 2rem;
+  }
 }
 @media (min-width: 768px) {
   .cards__box {
@@ -344,6 +411,37 @@ h1.company-name {
   .cards__card--three {
     grid-row: 1/2;
     grid-column: 7/10;
+  }
+  .plans {
+    padding: 8em 2em;
+  }
+  .plans__box {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+  }
+  .plans__item {
+    margin: 0 1em;
+  }
+  .plans__item-name {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .newsletter__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
+  .newsletter__text {
+    margin-bottom: 0;
+  }
+  .newsletter__form {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
+  }
+  .newsletter__form input {
+    margin-bottom: 0;
   }
 }
 @media (min-width: 992px) {
