--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,27 +32,27 @@ h1.company-name {
 	width: 100%;
 }
 
-.section-title{
-position: relative;
-margin: 0 auto 2em;
-font-size: 3.2rem;
-color:$gold;
-font-weight: 200;
-width: fit-content;
+.section-title {
+	position: relative;
+	margin: 0 auto 2em;
+	font-size: 3.2rem;
+	color: $gold;
+	font-weight: 200;
+	width: fit-content;
 
-&::before {
-	position: absolute;
-	bottom: -0.1em;
-	left: 0;
-	width: 40px;
-	height: 2px;
-	background-color: $gold;
-	content: '';
-}
+	&::before {
+		position: absolute;
+		bottom: -0.1em;
+		left: 0;
+		width: 40px;
+		height: 2px;
+		background-color: $gold;
+		content: '';
+	}
 
-span{
-	font-weight: 900;
-}
+	span {
+		font-weight: 900;
+	}
 }
 
 // header
@@ -228,15 +228,15 @@ span{
 			margin-bottom: 0.6em;
 			text-transform: uppercase;
 		}
-		&--one{
+		&--one {
 			grid-row: 1/2;
 			grid-column: 1/-1;
 		}
-		&--two{
+		&--two {
 			grid-row: 2/3;
 			grid-column: 1/-1;
 		}
-		&--three{
+		&--three {
 			grid-row: 3/4;
 			grid-column: 1/-1;
 		}
@@ -247,16 +247,14 @@ span{
 .info {
 	position: relative;
 	display: grid;
-	grid-template-areas: 
-	"title title title"
-	"box box box"
-	"box box box";
+	grid-template-areas:
+		'title title title'
+		'box box box'
+		'box box box';
 	padding: 6em 2em;
-
 
 	&__title {
 		grid-area: title;
-
 	}
 	&__boxes {
 		grid-area: box;
@@ -264,16 +262,16 @@ span{
 	&__box-img {
 		width: 100%;
 		object-fit: cover;
-		filter: sepia()
+		filter: sepia();
 	}
 	&__box-title {
-	margin: 0.3em 0;
-	font-size: 2.6rem;
-	color: $gold;
-	font-weight: 200;
+		margin: 0.3em 0;
+		font-size: 2.6rem;
+		color: $gold;
+		font-weight: 200;
 	}
 	&__box-text {
-		margin-bottom: 0.5em; ;
+		margin-bottom: 0.5em;
 	}
 	&__box-link {
 		display: block;
@@ -282,13 +280,11 @@ span{
 		color: $gold;
 		text-align: right;
 		text-decoration: none;
-		transition: color .3s;
+		transition: color 0.3s;
 
 		&:hover {
 			color: $darkgold;
 		}
-
-
 	}
 	&__bg-icon {
 		display: none;
@@ -297,9 +293,79 @@ span{
 
 // plans
 .plans {
-	
+	padding: 6em 2em;
+	background-color: $darker;
+
+	&__box {
+		margin: 1em 0;
+		padding: 2em 1em;
+		text-align: center;
+		border: 1px solid transparent;
+		border-radius: 8px;
+		background-color: $dark;
+		cursor: pointer;
+
+		&:hover {
+			background-color: $darker;
+			border: 2px solid $gold;
+			transition: 0.7s;
+		}
+	}
+
+	&__item {
+		margin: 1em 0;
+	}
+
+	&__item-icon {
+		width: 50px;
+	}
+
+	&__item-name {
+		margin-top: 0;
+		margin-bottom: 1.5em;
+		font-size: 1.8rem;
+		color: $gold;
+	}
 }
 
+// newsletter
+.newsletter {
+	padding: 2em 8em;
+	background-color: $red;
+	text-align: center;
+
+	&__text {
+		padding: 1em;
+		margin-bottom: 1em;
+		font-size: 4rem;
+		font-weight: 200;
+	}
+
+	&__form {
+		input {
+			margin-bottom: 1em;
+			padding: 1em;
+			width: 100%;
+			border: 1px solid transparent;
+			background-color: $white;
+		}
+
+		button {
+			padding: 1em;
+			border: 1px solid $gold;
+			background: none;
+			color: $gold;
+			font-weight: bold;
+			cursor: pointer;
+			transition: background-color .3s, .3s;
+
+			&:hover {
+				color: $red;
+				background-color: $gold;
+			}
+		}
+	}
+}
 
 @import './small';
 @import './medium';
