--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -1,8 +1,7 @@
 @media (min-width: 992px) {
-
-	.section-title{
+	.section-title {
 		font-size: 4.8rem;
-		
+
 		&::before {
 			height: 4px;
 		}
@@ -103,12 +102,17 @@
 		display: none;
 	}
 }
-@media (min-width: 992px) {
+
+@media (min-width: 1200px) {
 	.header {
 		&__text {
 			p {
 				font-size: 2.2rem;
 			}
 		}
+	}
+
+	.gallery {
+		grid-template-columns: repeat(8,1fr);
 	}
 }
